# Proyecto1Datos2

Doxygen/html/: _bloque_8h_source.html  _bola_8h_source.html  _force_8h_source.html  _juego_8h_source.html  _painter_8h_source.html  _paleta_8h_source.html  _pared_8h_source.html  _socket_server_8h_source.html  annotated.html  class_bloque-members.html  class_bloque.html  class_bola-members.html  class_bola.html  class_juego-members.html  class_juego.html  class_painter-members.html  class_painter.html  class_paleta-members.html  class_paleta.html  class_pared.html  class_socket_server.html  classes.html  dir_05ff4ae09b7af625045f3ab8acce2e2e.html  dir_5ded3dddac7b17007065ea467928bc6b.html  dir_9301ea679489c7658aecddfa6d4b429c.html  files.html  index.html  md__c___users__isaac__desktop__proyecto1_datos2_main__r_e_a_d_m_e.html  pages.html  struct_force-members.html  struct_force.html
Doxygen/html/search/: all_0.js  all_3.js  all_4.js  classes_2.js  pages_0.js  searchdata.js
Servidor/: Bloque.cpp  Bloque.h  Breakout.cpp  CMakeLists.txt  Force.h  Juego.cpp  Juego.h
Servidor/Game/: Bloque.cpp  Bola.cpp  Bola.h  Juego.h  Painter.h  Pared.cpp  Pared.h  SocketServer.h
Servidor/Juego/: Bloque.h  Bola.cpp  Bola.h  Force.cpp  Juego.cpp  Painter.cpp  Paleta.cpp  Paleta.h  Pared.cpp  Pared.h  SocketServer.cpp  SocketServer.h
src/: Ball.cpp  Ball.h  Client.cpp  Server.cpp
wiki_images/: READMEIMG.md
